# craftos2

./: .gitignore  flake.nix  run.sh
.github/workflows/: mcp-image.yml
embed/: build.sh  ccsim.cpp  gps_test.cpp
mcp/: Cargo.toml  build.rs
mcp/src/: main.rs
sim/: README.md  harness.lua  turtle-test.sh
sim/examples/: dig_down.lua  refuel_place.lua
sim/worlds/: chest_refuel.lua  pillar.lua
src/: Computer.cpp
src/peripheral/: modem.cpp  modem.hpp
