[package]
name = "craftos-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server driving an embedded CraftOS-PC for declarative CC simulation/tests"

[[bin]]
name = "craftos-mcp"
path = "src/main.rs"

[build-dependencies]
cc = "1"

[dependencies]
anyhow = "1.0.102"
libc = "0.2.186"
rmcp = "1.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std", "sync", "fs"] }
