[package]
name = "craftos-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server driving an embedded CraftOS-PC for declarative CC simulation/tests"

[[bin]]
name = "craftos-mcp"
path = "src/main.rs"

[build-dependencies]
cc = "1"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
futures = "0.3.32"
libc = "0.2.186"
rmcp = { version = "1.7.0", features = ["transport-streamable-http-server", "transport-io", "server", "macros"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std", "sync", "fs"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
